--- a/self_driving/style.css
+++ b/self_driving/style.css
@@ -2,9 +2,32 @@ body {
     margin: 0;
     background: darkgray;
     overflow: hidden;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#myCanvas {
+#verticalButtons{
+    display: flex;
+    flex-direction: column;
+}
+
+button{
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 7px;
+    margin: 2px;
+    cursor: pointer;
+}
+
+button:hover{
+    background: cyan;
+}
+
+#carCanvas {
     background: lightgray;
+}
+
+#nnCanvas {
+    background: black;
 }
